--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,5 +13,7 @@
     <a href="/">Home</a>
     <a href="/about">About</a>
     <a href="/blog">Blog</a>
+    <h1>私のAstro学習ブログ</h1>
+    <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
   </body>
 </html>
