--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,6 +13,10 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro","Write"];
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase"
 ---
 
 <html lang="en">
@@ -28,6 +32,25 @@ const goal = 3;
     <a href="/about">About</a>
     <a href="/blog">Blog</a>
     <h1>{pageTitle}</h1>
+    <!-- prettier-ignore -->
+    <style define:vars={{ skillColor, fontWeight, textCase }}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+
+      .skill {
+        color: var(--skillColor);
+		font-weight: var(--fontWeight);
+		text-transform: var(--textCase);
+      }
+
+	  p{
+		color:var(--skillColor);
+		font-weight: var(--fontWeight);
+		text-transform: var(--textCase);
+	  }
+    </style>
     <h2>...and my new astro site</h2>
 
     <p>
@@ -50,7 +73,7 @@ const goal = 3;
     <p>私のスキルは以下の通りです。</p>
     <ul>
       {skills.map((skill) =>
-      <li>{skill}</li>
+      <li class="skill">{skill}</li>
       )}
     </ul>
     {happy &&
