--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
-const pageTitle = "About me"
+import '../styles/global.css';
+
+const pageTitle = "About me";
 
 const identity = {
 	firstName: "Sara",
