--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from "../components/Navigation.astro"
 import '../styles/global.css';
 
 const pageTitle = "About me";
@@ -30,9 +31,7 @@ const textCase = "uppercase"
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/blog">Blog</a>
+    <Navigation />
     <h1>{pageTitle}</h1>
     <!-- prettier-ignore -->
     <style define:vars={{ skillColor, fontWeight, textCase }}>
