--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from "../components/Navigation.astro";
 const pageTitle = "Index"
 ---
 
@@ -12,8 +13,6 @@ const pageTitle = "Index"
   </head>
   <body>
     <h1>{pageTitle}</h1>
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/blog">Blog</a>
+    <Navigation />
   </body>
 </html>
