--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Navigation from "../components/Navigation.astro";
 const pageTitle = "Blog";
 ---
@@ -11,7 +12,6 @@ const pageTitle = "Blog";
     <meta name="generator" content="{Astro.generator}" />
     <title>{pageTitle}</title>
   </head>
-  <body>
     <Navigation />
     <h1>{pageTitle}</h1>
     <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
@@ -19,6 +19,8 @@ const pageTitle = "Blog";
       <li><a href="/posts/post-1">Number.1</a></li>
       <li><a href="/posts/post-2">Number.2</a></li>
       <li><a href="/posts/post-3">Number.3</a></li>
+
     </ul>
+<Footer/>
   </body>
 </html>
