--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Navigation from "../components/Navigation.astro";
 const pageTitle = "Index"
 ---
@@ -14,5 +15,6 @@ const pageTitle = "Index"
   <body>
     <h1>{pageTitle}</h1>
     <Navigation />
+    <Footer />
   </body>
 </html>
