--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
 import Footer from "../components/Footer.astro";
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
 const pageTitle = "Blog";
 ---
 
@@ -21,6 +21,6 @@ const pageTitle = "Blog";
       <li><a href="/posts/post-3">Number.3</a></li>
 
     </ul>
-<Footer/>
+	<Header/>
   </body>
 </html>
