--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Footer from "../components/Footer.astro";
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
 const pageTitle = "Index"
 ---
 
@@ -14,7 +14,6 @@ const pageTitle = "Index"
   </head>
   <body>
     <h1>{pageTitle}</h1>
-    <Navigation />
-    <Footer />
+    <Header />
   </body>
 </html>
