--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,11 @@ const pageTitle = "Index"
     <title>{pageTitle}</title>
   </head>
   <body>
-    <h1>{pageTitle}</h1>
     <Header />
+    <h1>{pageTitle}</h1>
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
