--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,15 +12,14 @@ const pageTitle = "Blog";
     <meta name="generator" content="{Astro.generator}" />
     <title>{pageTitle}</title>
   </head>
-    <Navigation />
+	<Header/>
     <h1>{pageTitle}</h1>
     <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
     <ul>
       <li><a href="/posts/post-1">Number.1</a></li>
       <li><a href="/posts/post-2">Number.2</a></li>
       <li><a href="/posts/post-3">Number.3</a></li>
-
     </ul>
-	<Header/>
+	<Footer />
   </body>
 </html>
