--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,8 @@
 ---
-import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
-const pageTitle = "Blog";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
+const pageTitle = "My Astro Learning Blog";
 ---
 
 <html lang="en">
@@ -12,14 +13,18 @@ const pageTitle = "Blog";
     <meta name="generator" content="{Astro.generator}" />
     <title>{pageTitle}</title>
   </head>
-	<Header/>
+  <body>
+    <Header />
     <h1>{pageTitle}</h1>
-    <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
+    <p>This is where I will post about my journey learning Astro.</p>
     <ul>
-      <li><a href="/posts/post-1">Number.1</a></li>
-      <li><a href="/posts/post-2">Number.2</a></li>
-      <li><a href="/posts/post-3">Number.3</a></li>
+      <li><a href="/posts/post-1/">Post 1</a></li>
+      <li><a href="/posts/post-2/">Post 2</a></li>
+      <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
-	<Footer />
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
