--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
-const pageTitle = "Index"
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
+const pageTitle = "Home Page";
 ---
 
 <html lang="en">
