--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,5 @@
 ---
-import Header from "../components/Header.astro"
-import Footer from "../components/Footer.astro";
-import '../styles/global.css';
-
+import BaseLayout from '../layouts/BaseLayout.astro'
 const pageTitle = "About me";
 
 const identity = {
@@ -22,18 +19,7 @@ const skillColor = "navy";
 const fontWeight = "bold";
 const textCase = "uppercase"
 ---
-
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content="{Astro.generator}" />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <Header />
-    <h1>{pageTitle}</h1>
+<BaseLayout pageTitle={pageTitle}>
     <!-- prettier-ignore -->
     <style define:vars={{ skillColor, fontWeight, textCase }}>
       h1 {
@@ -87,9 +73,4 @@ const textCase = "uppercase"
     :
     <p>My goal is not 3 days. 3日が目標ではありません。</p>
     }
-    <Footer />
-    <script>
-      import "../scripts/menu.js";
-    </script>
-  </body>
-</html>
+</BaseLayout>
