--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import Greeting from "../components/Greeting.jsx";
 const pageTitle = "Home page";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <h2>My awesome blog's sub title</h2>
+  <Greeting client:load messages={["Hey", "foolay", "Hi", "Welcome", "For the first time"]} />
 </BaseLayout>
